# PokerHelper

./: .env  .gitignore  AGENTS.md  API_CONFIGURATION_SUMMARY.md  AnalizadorCartas.py  CalculoDeProbabilidades.java  Carta.java  DecisionJugador.py  ESTRUCTURA.md  LICENSE  Panel.java  PokerException.java  Principal.java  README.md  index.html  tailwind.config.js
.github/workflows/: README.MD  maven.yml  rust.yml
analisisCartas/: AnalizadorCartas.py  README.dataset.txt  arreglarDataSet.bat  model.py  requirements.txt
analisisCartas/anotaciones/: train_annotations.csv
analisisCartas/test/: _annotations.csv
computer_vision/: cv_sidecar.py
docs/: PokerHelper.docx
documentacion/: PokerHelper.docx  ~$kerHelper.docx  ~WRL0003.tmp
frontend/: pnpm-lock.yaml
poker-helper/: index.html  package.json  pnpm-lock.yaml
poker-helper/src-tauri/: Cargo.toml
poker-helper/src-tauri/crates/poker_agent/src/: lib.rs  probability.rs
poker-helper/src-tauri/crates/poker_agent/src/core/: card.rs  community_cards.rs  deck.rs
poker-helper/src-tauri/crates/poker_agent/src/evaluator/: game_state.rs  hand_analysis.rs
poker-helper/src-tauri/crates/poker_agent/tests/: equity_test.rs
poker-helper/src-tauri/icons/: icon.b64  readme.md
poker-helper/src-tauri/src/: main.rs
pokerHelper_tauri/: .env  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: fix_icons.py
src/: CalculoDeProbabilidades.java  Carta.java  Controlador.java  Panel.java  PokerException.java  Principal.java  Worker.java  main.js
src-tauri/: tauri.conf.json
src/gui/: Panel.java  (+2 more)
tauri/: readme.md
(+168 files in other folders)
