[package]
name = "poker-helper"
version = "0.1.0"
description = "Autonomous Poker Agent"
authors = ["DRLKs"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Local poker agent crate
poker_agent = { path = "crates/poker_agent" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["crates/poker_agent"]
